kubernetes-manifests/myapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: my-kubernetes-app
  template:
    metadata:
      labels:
        app: my-kubernetes-app
    spec:
      containers:
      - name: my-container
        image: starappimage.azurecr.io/kiranugmavenproject:399
        imagePullPolicy: Always
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: acrpull

---

apiVersion: v1
kind: Service
metadata:
  name: my-kubernetes-service
spec:
  selector:
    app: my-kubernetes-app
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
  type: LoadBalancer
